--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ main {
   left: 50%;
   -webkit-transform: translateX(-50%) scale(1);
   transform: translateX(-50%) scale(1);
-  bottom: 30%;
+  bottom: 40%;
   width: 10rem;
   height: 3.125rem;
   transition: -webkit-transform .3s ease 0s;
@@ -1946,15 +1946,13 @@ main {
   max-width: 100%;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   line-height: 1.2;
   font-family: Rostov;
   margin: 0 auto
 }
 .violet__item--2 .violet__text {
   max-width: 62.5rem
-}
-.violet__text-inner {
-  overflow-y: auto
 }
 .violet__video {
   bottom: 1.875rem;
