--- a/css/style.css
+++ b/css/style.css
@@ -3147,7 +3147,8 @@ main {
   }
   .works {
     padding-right: 0;
-    padding-left: 0
+    padding-left: 0;
+    padding-bottom: 1.25rem
   }
   .violet__content.open--1 {
     grid-template-rows: 100% 0 0
