--- a/css/style.css
+++ b/css/style.css
@@ -1824,7 +1824,7 @@ main {
   background-color: #000;
   padding: .1875rem;
   z-index: 1;
-  transition: all 2s linear;
+  transition: all 2s linear,padding .3s linear;
   overflow: hidden
 }
 .violet__item::before {
@@ -1846,7 +1846,7 @@ main {
 }
 .violet__item:nth-child(1) .violet__inner {
   width: 100%;
-  background-image: linear-gradient(140deg,#0a0a28 60%,#101836 79%,#162245 87%,#1c2c54 91%,#203764 94%,#244374 96%,#284f84 97%,#2b5b96 98%,#2b68a5 99%,#2b77b9 100%,#2985cb 100%,#2391db 100%,#1ba0ed 100%,#20404f 100%)
+  background-image: linear-gradient(140deg,#0a0a28 60%,#101836 79%,#162245 87%,#1c2c54 91%,#203764 94%,#244374 96%,#284f84 97%,#2b5b96 98%,#2b68a5 99%,#2b77b9 100%,#2985cb 100%,#2391db 100%,#1ba0ed 100%,#21414f 100%)
 }
 .violet__item:nth-child(2) {
   grid-column: span 2
@@ -1917,7 +1917,8 @@ main {
   font-family: FEGigant;
   display: flex;
   text-align: center;
-  justify-content: center
+  justify-content: center;
+  transition: all .6s ease 0s
 }
 .violet__hi {
   display: flex;
@@ -2551,6 +2552,52 @@ main {
     visibility: hidden;
     opacity: 0
   }
+}
+.section--parallax {
+  opacity: 0;
+  transition: all 1s ease 0s;
+  visibility: hidden;
+  z-index: 1
+}
+.section--parallax.visible {
+  opacity: 1;
+  transition: all 1s ease 1s;
+  visibility: visible
+}
+.parallax {
+  position: relative;
+  height: 100dvh
+}
+.parallax__slider {
+  height: 100%;
+  color: #fff
+}
+.parallax__slide {
+  overflow: hidden;
+  height: 100dvh;
+  position: relative;
+  transition: all 2s ease 0s;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  padding: 10.625rem
+}
+.parallax__slide.swiper-slide-active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1)
+}
+.parallax__slide-layer {
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+  will-change: transform
+}
+.parallax__content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: .625rem;
+  background-color: #fff
 }
 :root {
   --img: url("../img/glass.jpg")
@@ -3186,6 +3233,9 @@ main {
     height: 100%;
     flex: 1 1 auto
   }
+  .parallax__slide-layer {
+    background-position: 30% 0
+  }
 }
 @media (max-width:29.99875em) {
   .violet__text {
@@ -3482,6 +3532,9 @@ main {
   .skills__slider-btn--right:hover {
     -webkit-transform: scale(1.5) rotate(90deg);
     transform: scale(1.5) rotate(90deg)
+  }
+  .violet__item:hover .violet__title {
+    color: #2ccfcf
   }
   .violet__contact-item a:hover img {
     -webkit-transform: scale(1.1);
